--- a/docbuild/articles/toc.yml
+++ b/docbuild/articles/toc.yml
@@ -14,6 +14,8 @@
   href: next-steps.md
 - name: Handling Assets
   href: handling-assets.md
+- name: Web API
+  href: web-api.md
 - name: About This Site
   href: about-this-site.md
   items:
